--- a/requirements.txt
+++ b/requirements.txt
@@ -6,35 +6,35 @@
 #
 backoff==2.2.1
     # via huawei-solar
-certifi==2023.5.7
+certifi==2024.12.14
     # via requests
-charset-normalizer==3.1.0
+charset-normalizer==3.4.1
     # via requests
-huawei-solar==2.2.6
+huawei-solar==2.3.0
     # via -r requirements.in
-idna==3.4
+idna==3.10
     # via requests
-influxdb==5.3.1
+influxdb==5.3.2
     # via -r requirements.in
-msgpack==1.0.5
+msgpack==1.1.0
     # via influxdb
-pymodbus==3.1.3
+pymodbus==3.6.9
     # via huawei-solar
 pyserial==3.5
     # via pyserial-asyncio
 pyserial-asyncio==0.6
     # via huawei-solar
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via influxdb
-pytz==2023.3
+pytz==2024.2
     # via
     #   huawei-solar
     #   influxdb
-requests==2.31.0
+requests==2.32.3
     # via influxdb
-six==1.16.0
+six==1.17.0
     # via
     #   influxdb
     #   python-dateutil
-urllib3==2.0.2
+urllib3==2.3.0
     # via requests
